After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696864 - optical-media: Fix detection of loopback mounted ISOs
optical-media: Fix detection of loopback mounted ISOs
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-29 17:08 UTC by Bastien Nocera
Modified: 2013-04-05 08:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
optical-media: Fix detection of loopback mounted ISOs (3.18 KB, patch)
2013-03-29 17:08 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-03-29 17:08:11 UTC
.
Comment 1 Bastien Nocera 2013-03-29 17:08:13 UTC
Created attachment 240132 [details] [review]
optical-media: Fix detection of loopback mounted ISOs
Comment 2 Juan A. Suarez Romero 2013-04-05 08:59:29 UTC
commit e2c38a51beaca7983f9ab5868115e1dc058c9b7e
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Mar 29 17:58:04 2013 +0100

    optical-media: Fix detection of loopback mounted ISOs
    
    https://bugzilla.gnome.org/show_bug.cgi?id=696864

 src/optical-media/grl-optical-media.c | 72 +++++++----------------------------
 1 file changed, 14 insertions(+), 58 deletions(-)


Attachment 240132 [details] pushed as e2c38a5 - optical-media: Fix detection of loopback mounted ISOs