optical-media: Fix detection of loopback mounted ISOs

https://bugzilla.gnome.org/show_bug.cgi?id=696864